# Jaws

./: .clang-format  .cproject  .gitignore  .project  404.html  CMakeLists.txt  Dockerfile  Doxyfile  JawsWrapper.cpp  a.out  a.rkt  assembly.scm  base.scm  benchmark.scm  build.sh  chez.scm  client.scm  e.scm  example.md  example.scm  ffi.scm  func.scm  index-CI6DjAMt.css  index.html  ir.scm  loops.scm  meta.scm  notes.md  producer.scm  quasi.scm  react-vendor-DVpMmIQw.js  readme.md  server.scm  service-worker.js  tailrecursive.scm  thread.scm  utilities.scm
.vercel/: project.json
Final Report/: Template_FR.fdb_latexmk  Template_FR.fls  Template_FR.lof  Template_FR.lot  Template_FR.tex  cmpreport_02.cls  pdflatex12031.fls  pdflatex67437.fls  reportbib.bib  texput.fls
assets/: codemirror-vendor-Dyt8Wa72.js  index--APp6JGd.js  index-1lscAAMU.js  index-1xtBo_ra.js  index-6rTT1TS6.js  index-AhlqEfo2.css  index-B3C7qgxi.js  index-B6Il85Eg.js  index-B8C2M6My.js  index-BAPiejh7.js  index-BC2Q9g2T.css  index-BEh82JJd.js  index-BFaI5iME.js  index-BIAne582.js  index-BJBsPbvR.css  index-BKctoR6j.js  index-BPIIEGQD.js  index-BUTrHdpH.css  index-BWpBeolo.js  index-BZKfDraQ.js  index-BbMompj7.js  index-BdGg7gvR.js  index-BfDQY5iF.js  index-Bg6vR2Zf.js  index-BgjhwzjN.js  index-BkBdkEW2.css  index-Bl5Yp1g4.css  index-Bm2irrhG.css  index-Bme9crhh.js  index-BsAAMheh.css  index-BsI9ajGM.js  index-Bt2TxWWL.js  index-Btnh7uD3.js  index-BwYrj1xZ.js  index-BwtvTScu.js  index-C1wkG5K8.css  index-C2AaUncX.js  index-C4ld3452.js  index-C4sYsMbN.js  index-C5iubEV0.js  (+101 more)
docs/: _a_n_f_8h.html  _a_n_f_transformer_8cpp.html  _a_n_f_transformer_8h.html  _assembly_generation_8cpp.html  _assembly_generation_8h_source.html  _constant_fold_8h.html  _debug_utils_8cpp.html  _debug_utils_8cpp__incl.map  _debug_utils_8cpp_a674a3010f1d82bfb85da29200b857be8_cgraph.map  _debug_utils_8h.html  _debug_utils_8h__dep__incl.md5  _debug_utils_8h_source.html  _environment_8cpp.html  _environment_8h.html  _environment_8h__incl.map  _environment_8h_source.html  _error_8h.html  _error_8h__incl.map  _error_8h_source.html  _expression_8cpp.html  _expression_8cpp__incl.md5  _expression_8h.html  _expression_8h__incl.map  _expression_8h__incl.md5  _expression_8h_source.html  _expression_utils_8cpp.html  _expression_utils_8cpp__incl.map  _expression_utils_8cpp_ac52bae2aca3042f12a2bf0a5b710fd41_icgraph.md5  _expression_utils_8h.html  _expression_utils_8h__incl.map  _expression_utils_8h__incl.md5  _expression_utils_8h_source.html  _interpreter_8cpp.html  _interpreter_8cpp__incl.md5  _interpreter_8h.html  _interpreter_8h__incl.md5  _interpreter_8h_source.html  _jaws_eq_8cpp.html  _jaws_eq_8h.html  _jaws_eq_8h__incl.map  (+450 more)
doxygen-theme/: DoxygenLayout.xml  (+2 more)
pa/: .cproject  .project  CMakeLists.txt  portaudio_wrapper.c
runtime/: .cproject  CMakeLists.txt
runtime/include/: env.h  gc.h  jaws_eq.h  jaws_io.h  jaws_list.h  run_time.h  types.h  util.h  value.h
runtime/src/: env.c  gc.c  jaws_eq.c  jaws_io.c  jaws_list.c  main.c  run_time.c  types.c  value.c
web/: .cproject  .project  CMakeLists.txt  JawsWrapper.cpp  index.html
web/client/: Makefile  README.md  index.html  jaws.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/client/public/: 404.html  index.html
web/client/public/docs/: _a_n_f_8h_source.html  _a_n_f_transformer_8h_source.html  _dead_code_elimination_8cpp.html  _dead_code_elimination_8h.html  _dead_code_elimination_8h_source.html  _debug_utils_8cpp__incl.md5  _debug_utils_8h_a47bce1f2f00263891f5613d320d69b2e_cgraph.map  _debug_utils_8h_source.html  _environment_8cpp__incl.map  _environment_8cpp__incl.md5  _environment_8h__dep__incl.map  _environment_8h__incl.md5  _environment_8h_source.html  _error_8h__dep__incl.md5  _error_8h_source.html  _expression_8h__dep__incl.map  _expression_8h__dep__incl.md5  _expression_8h_source.html  _expression_utils_8cpp__incl.md5  _expression_utils_8cpp_ac52bae2aca3042f12a2bf0a5b710fd41_icgraph.map  _expression_utils_8h_a7e84ae7b548c4385705fa6c421242674_cgraph.md5  _interpreter_8h.html  _interpreter_8h__dep__incl.md5  _jaws_eq_8h__dep__incl.map  _jaws_eq_8h__dep__incl.md5  _jaws_hof_8cpp__incl.map  _jaws_hof_8h__incl.map  _jaws_hof_8h__incl.md5  _jaws_i_o_8cpp__incl.map  _jaws_i_o_8h__dep__incl.map  _jaws_i_o_8h__incl.map  _jaws_list_8h_source.html  _jaws_math_8cpp.html  _jaws_math_8h_source.html  _jaws_vector_8cpp.html  _jaws_vector_8cpp__incl.map  _jaws_vector_8cpp__incl.md5  _jaws_vector_8h__incl.map  _jaws_vector_8h_source.html  _macro_8h__dep__incl.md5  (+298 more)
web/client/public/docs/search/: all_1.js  all_10.js  all_12.js  all_15.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_c.js  all_d.js  classes_1.js  classes_10.js  classes_3.js  classes_7.js  classes_e.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_7.js  enumvalues_a.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_0.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_e.js  namespaces_0.js  namespaces_2.js  searchdata.js  typedefs_0.js  (+10 more)
web/client/public/javascript/: jaws.js
web/client/public/lib/: base.scm  list_utils.scm  loops.scm
web/client/public/markdown/: basic_operations.md
web/client/public/test/: loops_test.scm
web/client/src/: App.tsx
web/client/src/components/: DifficultyBadge.tsx  DocCard.tsx  ExampleCardsProps.tsx  codeEditor.tsx  examples.ts  footer.tsx  highlightedText.tsx  layout.tsx  liveEditor.tsx  multilineCode.tsx  repl-modes.tsx  tabs.tsx  terminal.tsx  welcome.tsx
web/client/src/hooks/: JawsContext.tsx  useJawsInterpreter.ts
web/client/src/styles/: globals.css
web/client/src/types/: jaws.d.ts  types.ts
web/client/src/utils/: loadMarkdown.tsx
web/client/src/views/: chapters.ts  compilerExplorer.tsx  docsView.tsx  documentation.tsx  editor.tsx  example.tsx  getStarted.tsx  learn.tsx  repl.tsx  welcome.tsx
web/lib/: base.scm
(+699 files in other folders)
